tests/neg/semantic_memcpy_voidptr_bad_arg1.baa
// EXPECT: نوع المعامل 1 في 'نسخ_ذاكرة' غير متوافق

صحيح الرئيسية() {
    عدم* ناتج = نسخ_ذاكرة(١, عدم, ٤).
    إرجع ٠.
}
